# bchydro_outage_notifier

./: Cargo.toml  settings.yaml
src/: bchydro_rss.rs  main.rs  settings.rs
